refactor: According to reviewer's comments